# user-salse

./: .gitignore  CODE_REVIEW_GUIDE.md  CODE_REVIEW_GUIDE_2_3.md  CODE_REVIEW_GUIDE_2_4.md  E2E_HANDOFF.md  README.md  chain_e2e.py  debug_output.txt  docker-compose.test.yml  e2e_commission_rules.py  e2e_common.py  e2e_extended.py  e2e_full_flow.py  e2e_gap_cover.py  er-salse  real_email_e2e.py  rebuild_db.py  visible_e2e.py  visible_e2e_full.py  用户旅途说明.md  需求说明.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  (+4 more)
backend/scripts/: create_admin.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_auth.py  test_admin_ticket_api.py  test_admin_user_api.py  test_audit_service.py  test_auth_api.py  test_auth_service.py  test_commission_config_idempotency.py  test_commission_integration.py  test_commission_seed_data.py  test_commission_service.py  test_concurrent_mysql.py  test_dashboard_api.py  test_earnings_api.py  test_earnings_service.py  test_invite_api.py  test_invite_service.py  test_license_api.py  test_license_service.py  test_long_term_reward.py  test_models.py  test_notification.py  test_payment_api.py  test_payment_service.py  test_pending_user_key.py  test_quota_api.py  test_quota_service.py  test_recharge_api.py  test_recharge_service.py  test_referral_api.py  test_referral_service.py  test_sale_api.py  test_sale_service.py  test_scenario_b_commission.py  test_schemas.py  test_security.py  test_security_secrets.py  test_system_config_api.py  test_team_api.py  (+3 more)
(+170 files in other folders)
