[project]
name = "user-salse-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "pymysql",
    "PyJWT",
    "passlib[bcrypt]",
    "bcrypt>=4.0",
    "pydantic-settings",
    "base62",
    "apscheduler",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "httpx",
]
